# pump-fun-bot

./: .env.example  .gitignore  CLAUDE.md  MAINTAINERS.md  README.md  buy.py  cli.py  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sell.py  setup.py  trade.py  tsconfig.json
.archive/: buy.py
.cursor/rules/: architecture.mdc  bots.mdc  cleanup.mdc  core.mdc  idl.mdc  monitoring.mdc  package-management.mdc  project-structure.mdc  python-style.mdc  tests.mdc  trading-bot.mdc  trading.mdc  utils.mdc
.github/workflows/: spam-detection.yml
.kiro/steering/: architecture.mdc  python-style.mdc  trading-bot.mdc
.windsurf/rules/: architecture.mdc  python-style.mdc  trading-bot.mdc
bots/: bot-sniper-1-geyser.yaml  bot-sniper-2-logs.yaml  bot-sniper-3-blocks.yaml  bot-sniper-4-pp.yaml
idl/: graduated.json  pump_fun_idl.json  pump_swap_idl.json  raydium_launchlab_idl.json
learning-examples/: blockSubscribe_extract_transactions.py  calculate_discriminator.py  check_boding_curve_status.py  cleanup_accounts.py  compute_associated_bonding_curve.py  decode_from_blockSubscribe.py  decode_from_getAccountInfo.py  decode_from_getTransaction.py  decoded_buy_tx_from_getTransaction.json  decoded_create_tx_from_getTransaction.json  fetch_price.py  get_graduating_tokens.py  get_pumpswap_pools.py  listen_create_from_blocksubscribe.py  listen_create_from_geyser.py  listen_new_direct.py  listen_new_direct_full_details.py  listen_new_portal.py  listen_to_logs_migration.py  listen_to_raydium_migration.py  manual_buy.py  manual_buy_geyser.py  manual_sell.py  manual_sell_pumpswap.py  mint_and_buy.py  mymanualsell.py  raw_bondingCurve_from_getAccountInfo.json  raw_buy_tx_from_getTransaction.json  raw_create_tx_from_getTransaction.json  track_bonding_curve_progress.py
learning-examples/blockSubscribe-transactions/: raw_create_tx_from_blockSubscribe.json
learning-examples/bonding-curve-progress/: get_bonding_curve_status.py  get_graduating_tokens.py  poll_bonding_curve_progress.py
learning-examples/listen-migrations/: compare_migration_listeners.py  listen_blocksubscribe_old_raydium.py  listen_logsubscribe.py  listen_programsubscribe.py
src/: bot_runner.py  cli.py  config.py  config_loader.py
src/cleanup/: manager.py  (+1 more)
tests/: compare_listeners.py  test_block_listener.py  test_geyser_listener.py  test_listener.py  test_logs_listener.py
trades/: LR7TYDeWamU7MsCXFH7ydwJYaZfRJs8pzgCQrh2pump.txt
(+66 files in other folders)
